[2단계 - 출석 다시 구현하기] 돔푸(이창근) 미션 제출합니다. (#87)
* chore: 기존 코드 전부 삭제

* docs: 기능 요구 사항 작성

* style: editorconfig 파일 추가

* feat: 출석 확인 기능 개발

* refactor: 크루별 출석 기록을 도메인으로 분리

* feat: 출석 수정 기능 개발

* rename: VO의 클래스명을 Result로 수정

* feat: 크루별 출석 기록 확인 기능 개발

* feat: 제적 위험자 확인 기능 개발

* feat: 입출력을 위한 Reader, Writer 개발

* feat: View 개발

* package: 외부에 의존하는 코드들을 io 패키지로 분리

* feat: 도메인을 생성하며 값을 넣어줄 수 있는 생성자 추가

* refactor: 출석 시간에 대한 로직을 AttendanceTime 도메인으로 분리

* refactor: 하나의 출석에 대한 로직을 Attendance 도메인으로 분리

* refactor: CrewAttendance가 dto에 최대한 의존하지 않도록 리팩터링

* refactor: AttendanceBook이 dto에 최대한 의존하지 않도록 리팩터링

* feat: 파일을 읽어 AttendanceBook 생성 기능 개발

* feat: 오늘 날짜 제공 기능 개발

* feat: 컨트롤러 개발

* feat: 메인 메서드 작성

- private 생성자들을 public으로 수정
- attendaces.csv의 내용을 주말이 없도록 수정

* fix: 출력 포맷에 맞도록 View 수정

* fix: 예외 발생시 ERROR 문구와 함께 메시지 출력되도록 수정

* refactor: 과한 메서드 분리 제거

* refactor: Attendancetime에서 null이 사용되지 않도록 리팩터링

* refactor: ExpelWarning의 열거형 상수가 의미있는 값을 가지도록 리팩터링

* refactor: 람다식에서 반복되는 공휴일 확인을 private 메서드로 추출

* refactor: 음력 변환 기능을 추상화하

* refactor: 공휴일 인터페이스 추가, 한국 공휴일이 구현하도록 리팩터링

* feat: 공휴일에 대한 기능을 수행하는 Holidays 도메인 작성

* feat: 출석 날짜 기능을 래핑하는 AttendanceDate 도메인 작성

- 기존 Attendance에 있던 책임들을 이동
- 수정된 생성 방식에 따른 다른 도메인 수정

* refactor: CrewAttendance에서 직접 제적위험도가 비정상인지 확인하도록 리팩터링

* chore: getAllAttendances 메서드 오타 수정

* package: 패키지명에 대문자 제거, 단어가 두개 이상인 경우 언더스코어를 사용하도록 수정

* refactor: get으로 시작하지만, 단순한 getter가 아니라 추가 동작이 필요한 메서드명 적절하게 수정

* refactor: 정적 팩터리 메서드의 메서드명을 의미있도록 수정

* refactor: 인터페이스가 중복되는 메서드 제거