@@ -1,168 +1,170 @@
 package io.view;
 
+import domain.Attendance;
 import domain.AttendanceStatus;
-import domain.ExpelRisk;
-import dto.result.AttendResult;
-import dto.result.ExpelMeasurementResult;
-import dto.result.MemberAttendResult;
-import dto.result.MemberAttendanceModifyResult;
-import util.dataProvider.DateProvider;
-import util.outputHandler.OutputHandler;
+import domain.ExpelWarning;
+import io.dto.ExpelWarningCrewResponse;
+import io.writer.Writer;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.format.TextStyle;
-import java.util.ArrayList;
 import java.util.Comparator;
-import java.util.List;
 import java.util.Locale;
+import java.util.Set;
 
 public class OutputView {
     
-    private final OutputHandler outputHandler;
-    private final DateProvider dateProvider;
+    private final Writer writer;
     
-    public OutputView(OutputHandler outputHandler, DateProvider dateProvider) {
-        this.outputHandler = outputHandler;
-        this.dateProvider = dateProvider;
+    public OutputView(final Writer writer) {
+        this.writer = writer;
     }
     
-    public void handleAttendResult(AttendResult attendResult) {
-        var result = parseAttendResultValue(attendResult);
-        outputHandler.handle(result);
+    public void outputAttendResult(
+            final LocalDate attendDate,
+            final LocalTime attendTime,
+            final AttendanceStatus status
+    ) {
+        writer.writeLine("\n" + parseDateTimeStatus(attendDate, attendTime, status) + "\n");
     }
     
-    private static String parseAttendResultValue(AttendResult attendResult) {
-        return String.format("%s %s (%s)",
-                parseDate(attendResult.attendanceDateTime().toLocalDate()),
-                parseTime(attendResult),
-                attendResult.attendanceStatus()
+    public void outputAttendanceModifyResult(
+            final LocalDate date,
+            final LocalTime oldTime,
+            final AttendanceStatus oldStatus,
+            final LocalTime newTime,
+            final AttendanceStatus newStatus
+    ) {
+        String output = "\n%s -> %s 수정 완료\n".formatted(
+                parseDateTimeStatus(date, oldTime, oldStatus),
+                parseTimeAndStatus(newTime, newStatus)
         );
+        writer.writeLine(output);
     }
     
-    private static String parseTime(AttendResult attendResult) {
-        if (!attendResult.triedAttend()) {
-            return "--:--";
-        }
-        return String.format("%02d:%02d", attendResult.attendanceDateTime().getHour(), attendResult.attendanceDateTime().getMinute());
-    }
-    
-    public void handleAttendanceModifyResult(MemberAttendanceModifyResult memberAttendanceModifyResult) {
-        
-        String result = String.format("%s %s (%s) -> %s (%s) 수정 완료!",
-                parseDate(memberAttendanceModifyResult.attendanceDate()),
-                parseTime(memberAttendanceModifyResult.oldAttendanceTime()),
-                parseStatus(memberAttendanceModifyResult.oldAttendanceStatus()),
-                parseTime(memberAttendanceModifyResult.newAttendanceTime()),
-                memberAttendanceModifyResult.newAttendanceStatus()
+    public void outputAttendanceModifyResult(
+            final LocalDate date,
+            final LocalTime newTime,
+            final AttendanceStatus newStatus
+    ) {
+        String output = "\n%s --:-- (결석) -> %s 수정 완료\n".formatted(
+                parseDate(date),
+                parseTimeAndStatus(newTime, newStatus)
         );
-        System.out.println(result);
+        writer.writeLine(output);
     }
     
-    private static String parseStatus(AttendanceStatus memberAttendanceModifyResult) {
-        if (memberAttendanceModifyResult == null) {
-            return AttendanceStatus.결석.name();
-        }
-        return memberAttendanceModifyResult.name();
+    public void outputAttendanceRecords(
+            final String nickname,
+            final Set<Attendance> attendanceResponses,
+            final int attendCount,
+            final int lateCount,
+            final int absentCount,
+            final ExpelWarning expelWarning
+    ) {
+        String output = """
+                
+                이번 달 %s의 출석 기록입니다.
+                
+                %s
+                
+                출석: %d회
+                지각: %d회
+                결석: %d회
+                """.formatted(
+                nickname,
+                parseAttendances(attendanceResponses),
+                attendCount,
+                lateCount,
+                absentCount
+        ) + parseExpelWarning(expelWarning);
+        writer.writeLine(output);
     }
     
-    
-    private static String parseDate(LocalDate localDate) {
-        return String.format("%02d월 %02d일 %s",
-                localDate.getMonth().getValue(),
-                localDate.getDayOfMonth(),
-                localDate.getDayOfWeek().getDisplayName(TextStyle.FULL, Locale.KOREAN)
-        );
-    }
-    
-    private static String parseTime(LocalTime localTime) {
-        if (localTime == null) {
-            return "--:--";
-        }
+    public void outputExpelWarningCrews(final Set<ExpelWarningCrewResponse> expelWarningCrewResponses) {
+        StringBuilder sb = new StringBuilder();
         
-        return String.format("%02d:%02d", localTime.getHour(), localTime.getMinute());
+        sb.append("\n")
+                .append("제적 위험자 조회 결과")
+                .append("\n");
+        
+        expelWarningCrewResponses.stream()
+                .sorted(new ExpelWarningCrewResponseComparator())
+                .forEach(response -> sb.append(parseExpelWarningResponse(response)).append("\n"));
+        
+        writer.writeLine(sb.toString());
     }
     
-    public void handleMemberAttendanceResult(MemberAttendResult attendanceResult) {
-        String result = String.format("""
-                        이번 달 %s의 출석 기록입니다.
-                        
-                        %s
-                        
-                        출석: %d회
-                        지각: %d회
-                        결석: %d회
-                        
-                        %s
-                        """,
-                attendanceResult.name(),
-                parseAttendResults(attendanceResult.attendanceResults(), dateProvider.getDate()),
-                attendanceResult.attendCount(),
-                attendanceResult.lateCount(),
-                attendanceResult.absentCount(),
-                parseExpelRisk(attendanceResult.expelRisk())
-        );
+    private static class ExpelWarningCrewResponseComparator implements Comparator<ExpelWarningCrewResponse> {
         
-        outputHandler.handle(result);
-    }
-    
-    private static String parseAttendResults(List<AttendResult> attendResults, LocalDate now) {
-        var results = new ArrayList<>(attendResults);
-        
-        List<AttendResult> attendResultsToAdd = new ArrayList<>();
-        
-        for (int i = 1; i <= now.getDayOfMonth(); i++) {
-            boolean isExist = false;
-            for (AttendResult attendResult : results) {
-                if (attendResult.attendanceDateTime().toLocalDate().getDayOfMonth() == i) {
-                    isExist = true;
-                    break;
-                }
+        @Override
+        public int compare(final ExpelWarningCrewResponse o1, final ExpelWarningCrewResponse o2) {
+            
+            if (calculateSortingValue(o1) != calculateSortingValue(o2)) {
+                return -Integer.compare(calculateSortingValue(o1), calculateSortingValue(o2));
             }
             
-            if (!isExist) {
-                attendResultsToAdd.add(new AttendResult(LocalDateTime.of(now.withDayOfMonth(i), LocalTime.of(12, 0)), AttendanceStatus.결석, false));
+            if (o1.lateCount() != o2.lateCount()) {
+                return -Integer.compare(o1.lateCount(), o2.lateCount());
             }
+            
+            return o1.nickname().compareTo(o2.nickname());
         }
         
-        results.addAll(attendResultsToAdd);
-        
-        return results.stream()
-                .map(OutputView::parseAttendResultValue)
-                .reduce((str1, str2) -> str1 + "\n" + str2)
+        private int calculateSortingValue(final ExpelWarningCrewResponse response) {
+            return (response.lateCount() / 3) + response.absentCount();
+        }
+    }
+    
+    private String parseExpelWarningResponse(final ExpelWarningCrewResponse response) {
+        return "- %s: 결석 %d회, 지각 %d회 (%s)".formatted(
+                response.nickname(),
+                response.absentCount(),
+                response.lateCount(),
+                response.expelWarning().name()
+        );
+    }
+    
+    private String parseAttendances(final Set<Attendance> attendances) {
+        return attendances.stream()
+                .sorted(Comparator.comparing(Attendance::getAttendDate))
+                .map(attendance -> parseDateTimeStatus(
+                        attendance.getAttendDate(),
+                        attendance.getAttendTime().getAttendTime().get(),
+                        attendance.getStatus()))
+                .reduce((s1, s2) -> s1 + "\n" + s2)
                 .orElse("");
     }
     
-    private static String parseExpelRisk(ExpelRisk expelRisk) {
-        if (expelRisk == ExpelRisk.정상) {
+    private String parseExpelWarning(final ExpelWarning expelWarning) {
+        if (expelWarning == ExpelWarning.정상) {
             return "";
         }
-        return String.format("%s 대상자입니다.", expelRisk.name());
+        return "\n%s 대상자입니다.\n".formatted(expelWarning.name());
     }
     
-    public void handleExpelMeasurementResults(List<ExpelMeasurementResult> expelMeasurementResults) {
-        StringBuilder sb = new StringBuilder("제적 위험자 조회 결과\n");
-        
-        expelMeasurementResults.stream()
-                .sorted(new ExpelMeasurementResultComparator())
-                .forEach(o -> sb.append(String.format("- %s: 결석 %d회, 지각 %d회 (%s)", o.targetName(), o.absentCount(), o.lateCount(), o.expelRisk().name())));
-        outputHandler.handle(sb.toString());
+    private String parseDateTimeStatus(final LocalDate date, final LocalTime time, final AttendanceStatus status) {
+        return parseDate(date) + " " + parseTimeAndStatus(time, status);
     }
     
-    private static final class ExpelMeasurementResultComparator implements Comparator<ExpelMeasurementResult> {
-        @Override
-        public int compare(ExpelMeasurementResult o1, ExpelMeasurementResult o2) {
-            if (o1.expelRisk() != o2.expelRisk()) {
-                return -Integer.compare(o1.expelRisk().getSeriousness(), o2.expelRisk().getSeriousness());
-            }
-            if (o1.lateCount() + o1.absentCount() != o2.lateCount() + o2.absentCount()) {
-                return -Integer.compare(o1.lateCount() + o1.absentCount(), o2.lateCount() + o2.absentCount());
-            }
-            if (o1.absentCount() != o2.absentCount()) {
-                return -Integer.compare(o1.absentCount(), o2.absentCount());
-            }
-            return o1.targetName().compareTo(o2.targetName());
+    private String parseDate(final LocalDate date) {
+        return "%02d월 %02d일 %s".formatted(
+                date.getMonth().getValue(),
+                date.getDayOfMonth(),
+                date.getDayOfWeek().getDisplayName(TextStyle.FULL, Locale.KOREAN)
+        );
+    }
+    
+    private String parseTimeAndStatus(final LocalTime time, final AttendanceStatus status) {
+        if (time == null) {
+            return "--:-- (%s)".formatted(status.name());
         }
+        
+        return "%02d:%02d (%s)".formatted(
+                time.getHour(),
+                time.getMinute(),
+                status.name()
+        );
     }
 }
